Написал основные конструкции

--- a/Асинхронность, многопоточность, многопроцессорность.md
+++ b/Асинхронность, многопоточность, многопроцессорность.md
@@ -1,5 +1,5 @@
-**Асинхронность**
-Асинхронное программирование — это парадигма, при которой выполнение задач происходит без блокировки основного потока. Одна задача может выполняться параллельно с другими, позволяя приложению оставаться отзывчивым даже при выполнении долгих операций. 
+**Асинхронность**(IO)
+Асинхронное программирование — это выполнение задач происходит без блокировки основного потока. Одна задача может выполняться параллельно с другими, позволяя приложению оставаться отзывчивым даже при выполнении долгих операций. 
 Особенности:
 1. Длительные операции запускаются без ожидания их завершения. 
 2. Программа продолжает выполнять другие задачи, пока ожидает завершения операции. 
@@ -7,14 +7,21 @@
 
 Асинхронное программирование — способ организации программы, при котором задача, начав операцию, требующую ожидания (например, запрос к базе данных), не блокирует всю программу, а позволяет ей переключиться на выполнение других задач. Когда ожидаемая операция завершается, программа может вернуться к исходной задаче.
 
-**Многопоточность**
+**Многопоточность**(IO)(конкурентность)
 Многопоточное программирование — это возможность запускать несколько потоков (нитей выполнения) одновременно в рамках одного процесса. Каждый поток — это отдельная последовательность команд, которая может выполняться независимо от других. 
 Особенности:
 1. Позволяет, например, в графическом приложении одновременно обрабатывать пользовательский интерфейс и выполнять фоновые операции: загрузку данных, сохранение файлов и другие.
 2. Основной поток при этом не блокируется.
 3. Разработчик может явно создавать потоки, распределять между ними задачи и управлять их взаимодействием.
- 
-**Многопроцессорность**
+Примечание: GIL (Global Interpreter Lock) — способ синхронизации потоков, который используется в некоторых интерпретируемых языках программирования. В питоне обрабатываться может только один поток из за gil. То есть если в одном потоке что-то ожидает, то глобальный интерпретатор передает уравление другому потоку. Для переключеия между потоками тоже нужно время, поэтмоу слишком много потоков тоже нельзя делать.
+
+В рамках питона можно сказать что асинх. являеться некой альтернативой многопоточному программирования, т.к gil выполняет только один поток. И вместо того, чтобы пладить несколько потоков, интерпритатор питона (в асинхронном стиле) переключается на другую задачу, и не ждет завершение работы io bound задачи. Это все происходит в одном потоке.
+
+Многопоточный подход упирается в такую проблему как блокировка глобального интерпретатора gil в одну ед. веремени может выполняться только один поток и переключение между ними может занимать существенное время, у асинх. стиля такой проблемы нет.
+
+Еще одна проблема, в которой асинх. подход удобнее потоков. В многопото. режиме есть состояние гонки, то есть если несколько потоков обращаются к одному списку, то у одного потока может быть старая информация, а у другого новая 
+
+**Многопроцессорность**(CPU)
 Многопроцессорное программирование — это возможность использовать несколько независимых процессов для выполнения задач параллельно. Это позволяет: 
 - использовать несколько ядер процессора одновременно;
 - распределять задачи по процессам, что удобно для параллельной обработки больших массивов данных.
